# rewind-cn

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  cliff.toml  ralph.toml.example  release-plz.toml  rewind.toml.example
.chronis/sync/: events.jsonl
.claude/: settings.local.json
.github/workflows/: ci.yml  pages.yml  release.yml
.ralph-tui/: session-meta.json  session.json
crates/ralph-cli/: Cargo.toml
crates/ralph-cli/src/: config.rs  main.rs
crates/ralph-cli/src/commands/: init.rs  mcp.rs  mod.rs  plan.rs  run.rs  status.rs
crates/ralph-core/: Cargo.toml
crates/ralph-core/src/: engine.rs  lib.rs  mcp.rs
crates/ralph-core/src/application/: handlers.rs  planning.rs  scheduler.rs  status.rs
crates/ralph-core/src/domain/: aggregates.rs  commands.rs  error.rs  events.rs  mod.rs  model.rs  ports.rs  projections.rs
crates/ralph-core/src/infrastructure/: adapters.rs  agent.rs  command_bridge.rs  engine.rs  mcp_server.rs  mod.rs
crates/rewind-cn/: Cargo.toml
crates/rewind-cn-core/: Cargo.toml
crates/rewind-cn-core/src/: lib.rs  mcp.rs
crates/rewind-cn-core/src/application/: analytics.rs  commands.rs  handlers.rs  mod.rs  planning.rs  progress.rs  scheduler.rs  status.rs
crates/rewind-cn-core/src/domain/: error.rs  events.rs  ids.rs  mod.rs  model.rs  ports.rs
crates/rewind-cn-core/src/infrastructure/: adapters.rs  agent.rs  chronis.rs  claude_code.rs  coder.rs  command_bridge.rs  default_prompt.tera  engine.rs  evaluator.rs  gate_runner.rs  importer.rs  llm.rs  mcp_server.rs  mod.rs  orchestrator.rs  planner.rs  prompt_template.rs  sanitize.rs  telemetry.rs  toon.rs  worktree.rs
crates/rewind-cn-core/src/infrastructure/templates/: default_prompt.tera
crates/rewind-cn-core/tests/: analytics_integration.rs  broadcast_integration.rs  iteration_history_integration.rs  mcp_server_integration.rs  progress_notes_integration.rs  worktree_integration.rs
crates/rewind-cn/src/: config.rs  main.rs
crates/rewind-cn/src/commands/: feedback.rs  import.rs  init.rs  mcp.rs  mod.rs  plan.rs  query.rs  report.rs  run.rs  status.rs
crates/rewind-cn/src/tui/: app.rs  mod.rs  ui.rs
crates/rewind-cn/tests/: tui_app_state.rs
docs/: ADR-001-architecture-assessment-and-refactoring-plan.md  PRD-002-cli-commands.md  PRD-003-agent-orchestration.md  PRD-006-telemetry-feedback.md  PRD-006-tui-dashboard.md  PRD-007-llm-router.md  PRD-008-eventql-analytics.md  PRD-009-git-worktree-parallel.md  STATUS.md  profiling.md  testing-trophy-proposal.md
docs/beads/: US-002-01-status-display-impl.md  US-002-02-status-cli-wiring.md  US-003-01-plan-input-parsing.md  US-003-02-plan-passthrough-generator.md  US-003-03-plan-persist-and-output.md  US-004-01-start-task-and-session-commands.md  US-004-02-task-scheduler.md  US-004-03-agent-worker-phase1.md  US-004-04-run-cli-wiring.md  US-005-01-mcp-server-scaffold.md  US-005-02-mcp-tools.md  US-005-03-mcp-resources.md
docs/pages/: index.html
scripts/: migrate-beads-to-chronis.sh
skills/rewind-beads/: SKILL.md
skills/rewind-prd/: SKILL.md
tasks/: prd-ralph-tui-setup-parity-for-rewind.md  prd.json
