[package]
name = "ralph-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
ralph-core = { path = "../ralph-core" }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
