[package]
name = "rewind-cn-core"
edition.workspace = true
version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
allframe = { version = "0.1", features = ["cqrs-allsource"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
