[package]
name = "rewind-cn-core"
edition.workspace = true
version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
allframe = { version = "0.1", features = ["cqrs-allsource"] }
rig-core = "0.32"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
schemars = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
hotpath = "0.14"
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
telemetry = ["reqwest"]

[dev-dependencies]
chrono = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
